src/main/java/com/example/MyBookShopApp/errors/exceptions/RegistrationFormEmptyFieldException.java
package com.example.MyBookShopApp.errors.exceptions;

public class RegistrationFormEmptyFieldException extends Exception {
    public RegistrationFormEmptyFieldException(String message) {
        super(message);
    }
}
